--- a/Hilos.tex
+++ b/Hilos.tex
@@ -31,8 +31,6 @@ Aunque un núcleo solo puede realizar una tarea a la vez, se pueden usar los hil
 En lugar de realizar una tarea al completo, se divide en porciones ( cada hilo se encarga de un aspecto concreto del programa ), de modo que se van alternando entre porciones de distintas tareas para que parezca que ambas se están ejecutando simultáneamente.
 
 
-Tienen una desvantaja y es que están limitados por las capacidades del sistema donde se corren.
-
 \section*{Historia}
 En un sistema multiprogramado, los procesos constituyen una forma de expresar concurrencia, es decir,la capacidad de diferentes partes para ejecutarse fuera de orden o en orden parcial, sin afectar el resultado final. Sin embargo, hace más de medio siglo, el concepto de proceso no fue desarrollado para permitir la convivencia de los programas de distintos usuarios sobre los carísimos computadores de la época. Estos programas también se ejecutaban en concurrencia, pero solo interaccionaban entre ellos en su competencia por el acceso a los recursos compartidos. Sin embargo, enseguida se vio el potencial del modelo de procesos para implementar programas donde los procesos cooperaban, más que competían, en el acceso a los recursos.\\
 
@@ -48,11 +46,40 @@ Los hilos fueron una alternativa de programación más ágil, que incluía entid
       \caption{Hilos y procesos. Tomado de \cite{2}}
       \label{fig:Hilos}
    \end{figure}
+
+\section*{Problemas de seguridad:}
+Se pueden producir dos vulnerabilidades trágicas:
+\subsection*{Bloqueo mutuo: }
+ Es el bloqueo irreversible de un conjunto de hilos o procesos.
+ \subsection*{Condición de carrera:}
+  Es aquel que se produce cuando varios hilos o procesos intentan modificar de forma simultánea a un mismo recurso.\\
+  
+  \section*{Implementación:}
+ Generalmente se implementan hilos de dos maneras:
+\begin{itemize}
+    \item Multihilo apropiativo: permite al sistema determinar cuándo debe haber un cambio de contexto. La desventaja de esto es que el sistema puede hacer un cambio de contexto en un momento inadecuado, causando problemas.
+    \item Multihilo cooperativo: depende del mismo hilo abandonar el control cuando llega a un punto de detención, lo cual puede traer problemas cuando el hilo espera la disponibilidad de un recurso.
+\end{itemize}
+
+Ahora, a nivel práctico los hilos pueden ser implementados a nivel de usuario o a nivel de kernel. 
+
+\section*{Hilos a nivel de Kernel(KLT):}
+Todo el trabajo de gestión de hilos lo realiza el kernel o núcleo(Hardware).\\\\
+Tienen como gran beneficio poder aprovechar mejor las arquitecturas de los
+multiprocesadores, y que proporcionan un mejor tiempo de respuesta, ya que si un hilo se bloquea, los otros pueden seguir ejecutando.
+\section*{Hilos a nivel de usuario (ULT)}
+ Todo el manejo de los hilos lo realiza la aplicación (software) y el núleo no es consciente de los hilos.\\\\
+Tienen como beneficio que su cambio de contexto es más sencillo.Se pueden ejecutar en cualquier sistema operativo. La biblioteca de hilos es un conjunto compartido.\\\\
+Los hilos tienen  una desvantaja y es que están limitados por las capacidades del sistema donde se corren. Es decir, la respuesta depende del hardware.
+
+
+
 \begin{thebibliography}{0}
   \bibitem {1} Qué son los hilos de un procesador.Diferencias con los núcleos.(2019).Profesional Review.
   https://www.profesionalreview.com/2019/04/03/que-son-los-hilos-de-un-procesador/Que-son-los-hilos-de-procesamiento-o-threads
   \bibitem{2} Programación con hilos.(2014). Sebastian Castro. https://prezi.com/zligxav4or3z/programacion-con-hilos/
   \bibitem{3} Procesos e hilos(s.f). Universidad del país Vasco.https://ocw.ehu.eus/pluginfile.php/12388/mod-resource/content/13/html/Recursos/P04/Procesos-y-threads.html
+  \bibitem{4} Procesos Cooperativos, Hilos y Planificación de CPU(2013). Sistemas Operativos. https://chsos20132912059.wordpress.com/2013/10/15/procesos-cooperativos/
 \end{thebibliography}
 
 \end{document}
