--- a/Hilos.tex
+++ b/Hilos.tex
@@ -22,13 +22,13 @@
 	\vspace{1cm}
     {\scshape\large Informática II  \par}
 	\vspace{1cm}
-	{\scshape\large 16 de Julio del 2020 \par}
+	{\scshape\large 15 de Julio del 2020 \par}
 \end{titlepage}
 Los hilos o subprocesos son  el flujo de control de datos de un programa. Es un medio que permite administrar las tareas de un procesador y de sus diferentes núcleos de una forma más eficiente.\\ Gracias a los hilos, las unidades mínimas de asignación, que son las tareas o procesos de un programa, pueden dividirse en trozos para así optimizar los tiempos de espera de cada instrucción en la cola del proceso.\\
 
-Ahora cada hilo contiene un trozo de la tarea a realizar, algo más simple de realizar que si introducimos la tarea completa en el núcleo físico. De esta forma el sistema es capaz de procesar varias tareas al mismo tiempo y de forma simultánea, de hecho, podrá hacer tantas tareas como hilos tenga, y normalmente son una o dos por cada núcleo.\\
+Ahora cada hilo contiene un trozo de la tarea a realizar, algo más simple  que si introducimos la tarea completa en el núcleo físico. De esta forma el sistema es capaz de procesar varias tareas al mismo tiempo y de forma simultánea, de hecho, podrá hacer tantas tareas como hilos tenga, y normalmente son una o dos por cada núcleo.\\
 Aunque un núcleo solo puede realizar una tarea a la vez, se pueden usar los hilos para hacer creer al usuario (y al ordenador) que sí se puede hacer más de una tarea al mismo tiempo.\\
-En lugar de realizar una tarea al completo, se divide en porciones ( cada hilo se encarga de un aspecto concreto del programa ), de modo que se van alternando entre porciones de distintas tareas para que parezca que ambas se están ejecutando simultáneamente.
+En lugar de realizar una tarea completa, se divide en porciones ( cada hilo se encarga de un aspecto concreto del programa ), de modo que se van alternando entre porciones de distintas tareas para que parezca que ambas se están ejecutando simultáneamente.
 
 
 \section*{Historia}
@@ -49,10 +49,13 @@ Los hilos fueron una alternativa de programación más ágil, que incluía entid
 
 \section*{Problemas de seguridad:}
 Se pueden producir dos vulnerabilidades trágicas:
-\subsection*{Bloqueo mutuo: }
- Es el bloqueo irreversible de un conjunto de hilos o procesos.
- \subsection*{Condición de carrera:}
-  Es aquel que se produce cuando varios hilos o procesos intentan modificar de forma simultánea a un mismo recurso.\\
+\begin{itemize}
+    \item  Bloqueo mutuo: Es el bloqueo irreversible de un conjunto de hilos o procesos.
+ \item 
+  Condición de carrera: Es aquel que se produce cuando varios hilos o procesos intentan modificar de forma simultánea a un mismo recurso.\\
+\end{itemize}
+
+ 
   
   \section*{Implementación:}
  Generalmente se implementan hilos de dos maneras:
@@ -72,7 +75,15 @@ multiprocesadores, y que proporcionan un mejor tiempo de respuesta, ya que si un
 Tienen como beneficio que su cambio de contexto es más sencillo.Se pueden ejecutar en cualquier sistema operativo. La biblioteca de hilos es un conjunto compartido.\\\\
 Los hilos tienen  una desvantaja y es que están limitados por las capacidades del sistema donde se corren. Es decir, la respuesta depende del hardware.
 
-
+\section*{Implementación C++}
+Guiada por: \cite{5}
+\begin{itemize}
+    \item Primero debemos incluir la librería Qthread la cual es un identificador de un hilo de plataforma, permite administrar el hilo monitoreando su vida útil y solicitando que finalice su trabajo.
+    \item Se hereda la librería y  redefinimos el método run() que es  el que contiene el código del hilo. En este ejemplo actualizará un valor que va desde 0 a 99. Además en el constructor se recibe un parámetro que define cuanto tiempo esperará cada componente para cambiar el valor.
+    \item Luego se debe instanciar para poder ejecutarlo. En este ejemplo se instancia 3 veces, ya que se utilizarán 3 hilos para cambiar los valores de una barra de progreso, un dial y un lcdnumber en la interfaz.
+    \item Posteriormente se hace la conexión entre los hilos y los elementos de la interfaz.
+    \item Para finalizar se agregan dos botenes a la interfaz, los cuales darán inicio y final a la ejecución de los hilos con el comando start() y  terminate() respectivamente.
+\end{itemize}
 
 \begin{thebibliography}{0}
   \bibitem {1} Qué son los hilos de un procesador.Diferencias con los núcleos.(2019).Profesional Review.
@@ -80,6 +91,7 @@ Los hilos tienen  una desvantaja y es que están limitados por las capacidades d
   \bibitem{2} Programación con hilos.(2014). Sebastian Castro. https://prezi.com/zligxav4or3z/programacion-con-hilos/
   \bibitem{3} Procesos e hilos(s.f). Universidad del país Vasco.https://ocw.ehu.eus/pluginfile.php/12388/mod-resource/content/13/html/Recursos/P04/Procesos-y-threads.html
   \bibitem{4} Procesos Cooperativos, Hilos y Planificación de CPU(2013). Sistemas Operativos. https://chsos20132912059.wordpress.com/2013/10/15/procesos-cooperativos/
+  \bibitem{5} Tutorial Qt Creator(2015). DuarteCorporations.https://www.youtube.com/watch?v=iWFbjTlHrKI
 \end{thebibliography}
 
 \end{document}
